--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # en react deben empezar las var de entorno con REACT_APP_API 
 # y correr de nuevo npm start  
-REACT_APP_API_GOOGLE_MAP = "AIzaSyB6XcLePVpMLOpyOW6xyOjEk8j6_e0ffsU"
+REACT_APP_API_GOOGLE_MAP="AIzaSyBICJ_jdifQKk4rYxlffZmQAUhS4eP9FB8"
 #prueba
 #AIzaSyDTWvXLWa60GstsRFuNgXS1mZUAOKFydIo
 #FLOR
