--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@vis.gl/react-google-maps": "^1.4.2",
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "emailjs-com": "^3.2.0",
